Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2413,3 +2413,10 @@ papers:
       related to feeding habits than to phylogenetic descendence.
 
     authors: Budnik, V., Mpodozis, J., Varela, F. J., & Maturana, H. R. (1984)
+  - highlight: 0
+    title: "The neurophysiology of avian color vision. "
+    description: Abstract.
+    authors: Maturana, H., Varela, F., Marin, G., & Letelier, J. C. (1983)
+    link:
+      url: https://www.semanticscholar.org/paper/The-neurophysiology-of-avian-color-vision.-Varela-Letelier/d631c0bd794078cc5171244d2205841fe6c563ba
+      display: "Archivos de Biolgía y Medicina Experimentales, 16: 291–303."
