Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2619,10 +2619,8 @@ libros:
     title: Chapter 1. Neurophysiology of Cognition.
     authors: Maturana, H. (1970).
     link:
-      display: "Maturana, H. (1970). Chapter 1: Neurophysiology of cognition. In
-        Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
+      display: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
         Books."
       url: No link
     image: /images/uploads/41n-knoxoel._sx373_bo1-204-203-200_.jpg
-    description: "Maturana, H. (1970). Chapter 1: Neurophysiology of cognition. In
-      Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan Books."
+    description: .
