Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2485,7 +2485,7 @@ papers:
     title: Size constancy and accommodation.
     description: Abstract.
     link:
-      display: "Perception, 10, (6), 707–709. doi: 10.1068/p100707"
+      display: "Perception, 10, (6), 707–709. doi: 10.1068/p100707."
       url: https://journals.sagepub.com/doi/10.1068/p100707
     authors: Maturana, H. R., & Varela, F. J. (1981)
   - highlight: 0
