Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2616,8 +2616,8 @@ papers:
     title: Directional movement and horizontal edge detectors in the pigeon retina.
 libros:
   - highlight: 1
-    title: Chapter 1. Neurophysiology of Cognition.
-    authors: Maturana, H. (1970).
+    title: .
+    authors: .
     link:
       display: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
         Books."
