--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2614,13 +2614,4 @@ papers:
     authors: Maturana, H., & Frenk, S. (1963)
     description: Abstract.
     title: Directional movement and horizontal edge detectors in the pigeon retina.
-libros:
-  - highlight: 1
-    title: .
-    authors: .
-    link:
-      display: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
-        Books."
-      url: No link
-    image: /images/uploads/41n-knoxoel._sx373_bo1-204-203-200_.jpg
-    description: .
+libros: []
