Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2615,6 +2615,10 @@ papers:
     description: Abstract.
     title: Directional movement and horizontal edge detectors in the pigeon retina.
 libros:
+  - title: "Maturana, H. & Varela, F. (1973). De máquinas y seres vivos, Una teoría
+      sobre la organización biológica. "
+    authors: Editorial Universitaria.
+    description: .
   - description: .
     title: "Maturana, H. (1970). Chapter 1: Neurophysiology of cognition."
     authors: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
