Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2615,11 +2615,8 @@ papers:
     description: Abstract.
     title: Directional movement and horizontal edge detectors in the pigeon retina.
 libros:
-  - title: "Maturana, H. & Varela, F. (1973). De máquinas y seres vivos, Una teoría
-      sobre la organización biológica. "
-    authors: Editorial Universitaria.
+  - title: "Letelier, J. C. (2016). La segunda década del Senado Universitario de la
+      Universidad de Chile: Una envolvente de proyección. "
     description: .
-  - description: .
-    title: "Maturana, H. (1970). Chapter 1: Neurophysiology of cognition."
-    authors: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
-      Books."
+    authors: "In Anales de la Universidad de Chile, (11), (pp.189-207). Editorial
+      Universidad de Chile. doi: 10.5354/0717-8883.2017.45237."
