Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2620,3 +2620,7 @@ libros:
     description: .
     authors: "In Anales de la Universidad de Chile, (11), (pp.189-207). Editorial
       Universidad de Chile. doi: 10.5354/0717-8883.2017.45237."
+  - title: Vas, N., Mpodozis, J., Botelho, J. F., & Ramos, G. (2011). Onde está o
+      organismo? Derivas e outras histórias na biologia e imunologia.
+    authors: Editora da UFSC.
+    description: .
