Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2638,3 +2638,12 @@ libros:
     authors: In Lenaerts, T., Giacobini, M., Bersini, H., Bourgine, P., Dorigo, M.,
       & Doursat, R. (Eds.), Advances in artificial life, ECAL 2011. MIT Press.
       (pp. 763-770).
+  - title: "Jaramillo, S., Honorato-Zimmer, R., Pereira, U., Contreras, D.,
+      Raynaert, B., Hernández, V., Soto-Andrade, J., Cárdenas, M. L.,
+      Cornish-Bowden, A., & Letelier, J. C. (2010). (M,R) Systems and RAF sets:
+      Common ideas, tools and projections. "
+    description: .
+    authors: In Fellermann, H., Dörr, M., Hanczyc, M., Ladegaard, L., Maurer, S.,
+      Merkle, D., Monnard, P., Støy, K., & Rasmussen, S. (Eds.). Artificial Life
+      XII, Proceedings of the Twelfth International Conference on the Synthesis
+      of Living Systems. MIT Press. (pp. 94-100).
