--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2647,3 +2647,23 @@ libros:
       Merkle, D., Monnard, P., Støy, K., & Rasmussen, S. (Eds.). Artificial Life
       XII, Proceedings of the Twelfth International Conference on the Synthesis
       of Living Systems. MIT Press. (pp. 94-100).
+  - title: "Rubilar-Rogers, D., & Vargas, A. O. (2008). Vertebrados terrestres del
+      mesozoico en Chile: Estado del conocimiento y perspectivas. "
+    description: .
+    authors: In Rubilar, A., Rubilar-Rogers, D., & Gutstein, C. S. (Eds). I Simposio
+      - Paleontología en Chile - Libro de actas. (pp. 83-86).
+  - title: "Mpodozis, J. (2008). Phyletic conservation and change: behavior is
+      (most) important. "
+    description: .
+    authors: In Rubilar, A., Rubilar-Rogers, D., & Gutstein, C. S. (Eds). I Simposio
+      - Paleontología en Chile - Libro de actas. (p. 171).
+  - title: "Vargas, A. O., Fallon, J. F., Rubilar-Rogers, D., & Mpodozis, J. (2008).
+      The evolution and development of perching digir of birds. "
+    authors: In Rubilar, A., Rubilar-Rogers, D., & Gutstein, C. S. (Eds). I Simposio
+      - Paleontología en Chile - Libro de actas. (pp. 174-176).
+    description: .
+  - title: "Vargas, A. O., & Wagner, G. P. (2008). A homeotic framshift in the
+      evolution of the bird wing: New comparative and experimental evidence. "
+    description: .
+    authors: In Rubilar, A., Rubilar-Rogers, D., & Gutstein, C. S. (Eds). I Simposio
+      - Paleontología en Chile - Libro de actas. (p. 177).
