Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2647,6 +2647,11 @@ libros:
       Merkle, D., Monnard, P., Støy, K., & Rasmussen, S. (Eds.). Artificial Life
       XII, Proceedings of the Twelfth International Conference on the Synthesis
       of Living Systems. MIT Press. (pp. 94-100).
+  - title: "Aboitiz, F., Concha, M. L., González-Billault, C., & Mpodozis, J.
+      (2018). From ecology to brain development: Bridging separate evolutionary
+      paradigs. "
+    description: .
+    authors: "Frontiers Media. doi: 10.3389/978-2-88945-557-7"
   - title: "Rubilar-Rogers, D., & Vargas, A. O. (2008). Vertebrados terrestres del
       mesozoico en Chile: Estado del conocimiento y perspectivas. "
     description: .
