Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2672,3 +2672,10 @@ libros:
     description: .
     authors: In Rubilar, A., Rubilar-Rogers, D., & Gutstein, C. S. (Eds). I Simposio
       - Paleontología en Chile - Libro de actas. (p. 177).
+  - title: "Letelier, J. C., Soto-Andrade, J., Guíñez-Abarzúa, F., Cornish-Bowden,
+      A., & Cardenas, M. (2004). Metabolic closure in (M,R) System. "
+    description: .
+    authors: In Pollack, J., Bedau, M., Husbands, P., Ikegami, T., & Watson, R. A.
+      (Eds.), Artificial Life IX, Proceedings of the Ninth International
+      Conference on the Simulation and Synthesis of Artificial Life. MIT Press.
+      (pp. 450-455).
