Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2705,5 +2705,5 @@ libros:
   - title: "Mayor, R., Young, R., & Vargas, A. (1998). 3 Development of neural crest
       in Xenophus. "
     description: .
-    authors: In Current topics in development biology (Volumen 43) (pp. 85-113).
-      Academic Press.
+    authors: In Pedersen, R. A. & Schatten, G. P. (Eds.), Current topics in
+      development biology (Volumen 43) (pp. 85-113). Academic Press.
