Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2693,7 +2693,7 @@ libros:
   - title: "Letelier, J. C. (2002). Dedication: The scientific routes of Francisco
       Varela (1946-2001). "
     description: .
-    authors: "). In Roy, R., Köppen, M., Ovaska, S., Furuhashi, T., & Hoffman, F.
+    authors: "In Roy, R., Köppen, M., Ovaska, S., Furuhashi, T., & Hoffman, F.
       (Eds.), Soft computing and industry: Recent applications (pp. XIX-XXVII).
       Springer."
   - title: "Letelier, J. C., Marin, G., & Mpodozis, J. (2002). Computing with
