Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2707,3 +2707,15 @@ libros:
     description: .
     authors: In Pedersen, R. A. & Schatten, G. P. (Eds.), Current topics in
       development biology (Volumen 43) (pp. 85-113). Academic Press.
+  - title: "Mpodozis, J., Letelier, J. C., Maturana, H. (1995). Nervous system as a
+      closed neuronal network: behavioral and cognitive consequences."
+    description: .
+    authors: In Mira, J., & Sandoval, F. (Eds). From Natural to Artificial Neural
+      Computation. IWANN 1995. Lecture Notes in Computer Science Volume 930)
+      (pp. 130-136). Springer. https://doi.org/10.1007/3-540-59497-3_166
+  - title: "Maturana, H., & Mpodozis, J. (1992). Origen de las especies por medio de
+      la deriva natural. O la diversificación de los linajes a través de la
+      conservación y cambio de los fenotipos ontogenéticos. "
+    description: .
+    authors: "Publicación Ocasional núm. 46: 1-48, Santiago: Museo Nacional de
+      Historia Natural. "
