Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2652,6 +2652,17 @@ libros:
       Merkle, D., Monnard, P., Støy, K., & Rasmussen, S. (Eds.), Artificial Life
       XII, Proceedings of the Twelfth International Conference on the Synthesis
       of Living Systems (pp. 94-100). The MIT Press. "
+  - title: "Maturana, H., & Mpodozis, J. (2009), Origen de las especies por medio de
+      la deriva natural. O la diversificación de los linajes a través de la
+      conservación y cambio de los fenotipos ontogenéticos. "
+    description: .
+    authors: "In Maturana, H. La realidad: ¿objetiva o construida?. I Fundamentos
+      biológicos de la realidad (2da ed., pp. 105-159). Anthropos Editorial."
+  - title: "Maturana, H., & Mpodozis, J. (2009), Percepción: Configuración
+      conductual del objeto. "
+    description: .
+    authors: "In Maturana, H. La realidad: ¿objetiva o construida?. II Fundamentos
+      biológicos del conocimiento (2da ed., pp. 170-178). Anthropos Editorial."
   - title: "Rubilar-Rogers, D., & Vargas, A. O. (2008). Vertebrados terrestres del
       mesozoico en Chile: Estado del conocimiento y perspectivas. "
     description: .
