Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2730,3 +2730,11 @@ libros:
     description: .
     authors: "Publicación Ocasional núm. 46: 1-48, Santiago: Museo Nacional de
       Historia Natural. "
+  - title: "Maturana, H., & Varela, F. (1987). The tree of knowledge: A new look at
+      the biological roots of human understanding. "
+    description: .
+    authors: Shambhala.
+  - title: "Maturana, H., & Varela, F. (1985). El árbol del conocimiento: Las bases
+      biológicas del entendimiento humano. "
+    description: .
+    authors: Editorial Universitaria.
