Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2738,9 +2738,14 @@ libros:
       biológicas del entendimiento humano. "
     description: .
     authors: Editorial Universitaria.
-  - title: "Varela, F. (1981). Living Ways of Sense-Making: A Middle Path for
+  - title: "Varela, F. (1984). Living Ways of Sense-Making: A Middle Path for
       Neuroscience. "
     authors: "In Livingston, P. (Ed.). Disorder and Order: Proceedings of the
       Stanford International Symposium (Sept. 14-16, 1981) (p. 208). Anmi
       Library."
+    description: .
+  - title: Varela, F. (1984) Two principles for self-organization.
+    authors: "In Ulrich, H., & Probst, G. J. B. (Eds.). Self-organization and
+      management of social systems: Insights, promises, doubts, and questions
+      (pp. 25-32). Springer."
     description: .
