Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2749,3 +2749,20 @@ libros:
       management of social systems: Insights, promises, doubts, and questions
       (pp. 25-32). Springer."
     description: .
+  - title: "Maturana, H., & Varela, F. (1980). Autopoiesis and cognition: The
+      realization of the living."
+    description: .
+    authors: D. Reidel Publishing Company.
+  - title: Maturana, H. (1978). Cognition.
+    description: .
+    authors: In Hejl, P., Koch, W., & Roth, G. (Eds.). Wahrnehmung und Kommunikation
+      (pp. 29-49). Peter Lang.
+  - title: "Maturana, H. (1978). Biology of language: The epistemology of reality."
+    authors: "In Miller, G., & Lenneberg, E. (Eds.). Psychology and Biology of
+      Language and Thought: Essays in Honor of Eric Lenneberg (pp. 28-62).
+      Academic Press. "
+    description: .
+  - title: "Maturana, H., & Varela, F. (1973). De máquinas y seres vivos: Una teoría
+      sobre la organización biológica."
+    description: .
+    authors: Editorial Universitaria.
