Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2766,3 +2766,7 @@ libros:
       sobre la organización biológica."
     description: .
     authors: Editorial Universitaria.
+  - title: "Maturana, H. (1970). Chapter 1: Neurophysiology of cognition."
+    authors: "In Garvin, P.L. (Ed.), Cognition: A multiple view (pp. 3-23). Spartan
+      Books."
+    description: .
